--- a/av-api/package.json
+++ b/av-api/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/cbc-video/av-dashboard/issues"
   },
-  "homepage": "https://github.com/cbc-video/av-dashboard"
+  "homepage": "https://github.com/cbc-video/av-dashboard",
+  "dependencies": {
+    "atem": "^0.1.7",
+    "hapi": "^14.0.0"
+  }
 }
