--- a/av-api/package.json
+++ b/av-api/package.json
@@ -25,6 +25,9 @@
   "dependencies": {
     "atem": "^0.1.7",
     "edge": "^5.9.2",
+    "good": "^7.0.1",
+    "good-console": "^6.1.2",
+    "good-squeeze": "^4.0.0",
     "hapi": "^14.0.0",
     "ipcam-controller": "^1.0.5"
   }
