--- a/av-api/package.json
+++ b/av-api/package.json
@@ -23,12 +23,13 @@
   },
   "homepage": "https://github.com/cbc-video/av-dashboard",
   "dependencies": {
-    "atem": "^0.1.7",
+    "applest-atem": "^0.1.9",
     "edge": "^5.9.2",
     "good": "^7.0.1",
     "good-console": "^6.1.2",
     "good-squeeze": "^4.0.0",
     "hapi": "^14.0.0",
-    "ipcam-controller": "^1.0.5"
+    "ipcam-controller": "^1.0.5",
+    "nconf": "^0.8.4"
   }
 }
